--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "hemogenius",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@nextui-org/react": "^2.4.8",
-    "canvg": "^4.0.2",
-    "framer-motion": "^11.5.6",
-    "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18",
-    "zustand": "^5.0.0-rc.2"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+   "name": "hemogenius",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@heroui/react": "2.6.14",
+      "canvg": "^4.0.2",
+      "framer-motion": "^11.5.6",
+      "next": "14.2.13",
+      "react": "^18",
+      "react-dom": "^18",
+      "zustand": "^5.0.0-rc.2"
+   },
+   "devDependencies": {
+      "eslint": "^8",
+      "eslint-config-next": "14.2.13",
+      "postcss": "^8",
+      "tailwindcss": "^3.4.1"
+   }
 }
