--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "@heroui/react": "2.6.14",
       "canvg": "^4.0.2",
       "framer-motion": "^11.5.6",
-      "next": "14.2.13",
+      "next": "^14.2.28",
       "react": "^18",
       "react-dom": "^18",
       "zustand": "^5.0.0-rc.2"
